manifests/books-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
        - name: books-service
          image: 491377098012.dkr.ecr.us-east-1.amazonaws.com/books-service:latest
          ports:
            - containerPort: 3000
