manifests/frontend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 491377098012.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
          ports:
            - containerPort: 3000
