manifests/orders-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: 491377098012.dkr.ecr.us-east-1.amazonaws.com/orders-service:latest
          ports:
            - containerPort: 3000
