manifests/users-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: 491377098012.dkr.ecr.us-east-1.amazonaws.com/users-service:latest
          ports:
            - containerPort: 3000
