manifests/books-service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  type: NodePort
  selector:
    app: books-service
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
