manifests/orders-service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  type: NodePort
  selector:
    app: orders-service
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
