manifests/users-service_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  selector:
    app: users-service
  ports:
    - port: 3000
      targetPort: 3000
