manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: books-service
                port:
                  number: 3000
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 3000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3000
